2004-11-09 00:14 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNode) if -DSURFACE_VALIDITY defined, 
	optimizeFaceUV is called instead of optimizedUV, so that the volume
	quality is ignored.

2004-11-03 16:50 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am created a new library libUnitMesh.a so that
	-DSURFACE_VALIDITY can be defined for unit_mesh.c and it will not
	interfere with the standalone sequential refine executable

2004-11-03 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdge,gridCollapseEdge) the inserted
	or collapsed to node is projected to CAD when
	-DSURFACE_VALIDITY is defined. This will disrupt the behavior of
	the standalone sequential refine executable (not parallel
	librefine.a), and make gridmove projection unnecessary.

2004-11-01 23:09 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR) When -DSURFACE_VALIDITY is defined,
	will return -1.0 if a jacobian <= 6.0e-16 is found.
	* src/Makefile.am define -DSURFACE_VALIDITY when compiling 
	libMesherX. This will only be used by the stand alone codes.
	the parallel librefine.a used by FUN3D is not affected.

2004-11-01 16:47 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridPlotMinDeterminateAtSurface) Call
	tecplot scalar to display the min Jacobian determinate for
	a node.
	* src/gridshape.c (gridMinCellJacDet2) gives the minimum nodal
	Jacobian determinate for a cell.

2004-10-29 15:38 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridParentGeometry) added a method for find the
	parent geometry: returns -edgeId, faceId, or 0 for no geometry
	parent.

2004-10-29 13:45 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am added gridshape to libMesherX.a for unit_main.c
	and refine_main.c.

2004-10-29 09:39 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotSurfaceGeom) renamed from
	gridWriteTecplotSurfaceZone, same with gridCloseTecplotGeomFile.
	* src/grid.c (gridWriteTecplotSurfaceScalar) added to dump